# Ai-comic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  build.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
bubble/: editor.html  renderer.py
comfy/: client.py  workflows.py
comfy/workflows/: README.md  character_pose.json  character_sheet.json  compose_panel.json  outfit_reference.json  outfit_swap.json  scene.json
config/: __init__.py  models.yaml  persist.py  settings.py
generators/: character_pose.py  character_sheet.py  composition.py  outfit.py  panel.py  scene.py
scripts/: download_models.sh
ui/: components.py
ui/tabs/: bubble.py  characters.py  compose.py  library.py  models.py  outfits.py  scenes.py  settings.py
unraid/: ai-comic.xml
